rebel and kg changes
