# pkg/termite/lib/modelregistry/manifest.go
@@ -27,20 +27,12 @@ import (
 type ModelType string
 
 const (
-<<<<<<< Updated upstream
-	ModelTypeEmbedder     ModelType = "embedder"
-	ModelTypeChunker      ModelType = "chunker"
-	ModelTypeReranker     ModelType = "reranker"
-	ModelTypeRecognizer   ModelType = "recognizer"
-	ModelTypeQuestionator ModelType = "questionator"
-=======
 	ModelTypeEmbedder          ModelType = "embedder"
 	ModelTypeChunker           ModelType = "chunker"
 	ModelTypeReranker          ModelType = "reranker"
-	ModelTypeNER               ModelType = "ner"
-	ModelTypeGenerator         ModelType = "generator"
+	ModelTypeRecognizer        ModelType = "recognizer"
+	ModelTypeQuestionator      ModelType = "questionator"
 	ModelTypeRelationExtractor ModelType = "rel"
->>>>>>> Stashed changes
 )
 
 // Model capabilities
@@ -59,23 +51,14 @@ func ParseModelType(s string) (ModelType, error) {
 		return ModelTypeChunker, nil
 	case "reranker", "rerankers":
 		return ModelTypeReranker, nil
-<<<<<<< Updated upstream
 	case "recognizer", "recognizers":
 		return ModelTypeRecognizer, nil
 	case "questionator", "questionators":
 		return ModelTypeQuestionator, nil
-	default:
-		return "", fmt.Errorf("unknown model type: %s (valid: embedder, chunker, reranker, recognizer, questionator)", s)
-=======
-	case "ner":
-		return ModelTypeNER, nil
-	case "generator", "generators":
-		return ModelTypeGenerator, nil
 	case "rel", "relation", "relations":
 		return ModelTypeRelationExtractor, nil
 	default:
-		return "", fmt.Errorf("unknown model type: %s (valid: embedder, chunker, reranker, ner, generator, rel)", s)
->>>>>>> Stashed changes
+		return "", fmt.Errorf("unknown model type: %s (valid: embedder, chunker, reranker, recognizer, questionator, rel)", s)
 	}
 }
 
@@ -93,19 +76,12 @@ func (t ModelType) DirName() string {
 		return "chunkers"
 	case ModelTypeReranker:
 		return "rerankers"
-<<<<<<< Updated upstream
 	case ModelTypeRecognizer:
 		return "recognizers"
 	case ModelTypeQuestionator:
 		return "questionators"
-=======
-	case ModelTypeNER:
-		return "ner"
-	case ModelTypeGenerator:
-		return "generators"
 	case ModelTypeRelationExtractor:
 		return "rel"
->>>>>>> Stashed changes
 	default:
 		return string(t) + "s"
 	}
